@@ -10,7 +10,7 @@ setMethod("plot", signature(x = "AbscontDistribution", y = "missing"),
             col.vert = par("col"), col.main = par("col.main"), 
             col.inner = par("col.main"), col.sub = par("col.sub"), 
             cex.points = 2.0, pch.u = 21, pch.a = 16, mfColRow = TRUE,
-            to.draw.arg = NULL){
+            to.draw.arg = NULL, withSubst = TRUE){
 
      xc <- match.call(call = sys.call(sys.parent(1)))$x
      ### manipulating the ... - argument
@@ -101,7 +101,8 @@ setMethod("plot", signature(x = "AbscontDistribution", y = "missing"),
      }
      else paramstring <- qparamstring <- nparamstring <- ""
 
-     .mpresubs <- function(inx) 
+     .mpresubs <- if(withSubst){
+             function(inx) 
                     .presubs(inx, c("%C", "%D", "%N", "%P", "%Q", "%A"),
                           c(as.character(class(x)[1]), 
                             as.character(date()), 
@@ -109,7 +110,8 @@ setMethod("plot", signature(x = "AbscontDistribution", y = "missing"),
                             paramstring, 
                             qparamstring,
                             as.character(deparse(xc))))
-     
+            }else function(inx) inx
+            
      xlab0 <- list("d"="x", "p"="q", "q"="p")
      iL <- 1:length(to.draw)
      .mp2 <- function(dlb = dots$xlab, lb0 = list("d"="x", "p"="q", "q"="p")){
@@ -370,7 +372,7 @@ setMethod("plot", signature(x = "DiscreteDistribution", y = "missing"),
              col.main = par("col.main"), col.inner = par("col.main"), 
              col.sub = par("col.sub"),  cex.points = 2.0, 
              pch.u = 21, pch.a = 16, mfColRow = TRUE,
-             to.draw.arg = NULL){
+             to.draw.arg = NULL, withSubst = TRUE){
 
       xc <- match.call(call = sys.call(sys.parent(1)))$x
       ### manipulating the ... - argument
@@ -465,14 +467,16 @@ setMethod("plot", signature(x = "DiscreteDistribution", y = "missing"),
      else paramstring <- qparamstring <- nparamstring <- ""
 
 
-     .mpresubs <- function(inx)
+     .mpresubs <- if(withSubst){
+             function(inx) 
                     .presubs(inx, c("%C", "%D", "%N", "%P", "%Q", "%A"),
-                          c(as.character(class(x)[1]),
-                            as.character(date()),
-                            nparamstring,
-                            paramstring,
+                          c(as.character(class(x)[1]), 
+                            as.character(date()), 
+                            nparamstring, 
+                            paramstring, 
                             qparamstring,
                             as.character(deparse(xc))))
+            }else function(inx) inx
 
      xlab0 <- list("d"="x", "p"="q", "q"="p")
      iL <- 1:length(to.draw)
